--- a/platformio.ini
+++ b/platformio.ini
@@ -4,14 +4,16 @@ extra_configs = pio_local.ini
 
 [common]
 framework = arduino
-build_flags = -std=c++11 -Os -flto -Wall -Wextra -Werror -DPIO_FRAMEWORK_ARDUINO_LWIP2_IPV6_LOW_MEMORY
+build_flags = -std=c++11 -Os -flto -fmerge-constants -fmerge-all-constants -Wall -Wextra -Werror -DPIO_FRAMEWORK_ARDUINO_LWIP2_IPV6_LOW_MEMORY
 	!echo "-DFRIDGE_REVISION=\\\""$(git describe --dirty=+ --always)"\\\""
-lib_deps =
+build_unflags = -fno-rtti
+lib_deps = ArduinoJson@6.11.3
 
 [env:d1_mini]
-platform = espressif8266@2.0.4
+platform = espressif8266@2.2.2
 board = d1_mini
-framework = ${common.framework}
-build_flags = ${common.build_flags}
-lib_deps = ${common.lib_deps}
 board_build.f_cpu = 160000000L
+framework = ${common.framework}
+build_flags = ${common.build_flags} -Wl,-Teagle.flash.4m1m.ld
+build_unflags = ${common.build_unflags}
+lib_deps = ${common.lib_deps}
