--- a/platformio.ini
+++ b/platformio.ini
@@ -4,7 +4,7 @@ extra_configs = pio_local.ini
 
 [common]
 framework = arduino
-build_flags = -std=c++11 -Os -flto -fmerge-constants -fmerge-all-constants -Wall -Wextra -Werror -DPIO_FRAMEWORK_ARDUINO_LWIP2_IPV6_LOW_MEMORY
+build_flags = -std=c++11 -Os -flto -Wall -Wextra -Werror -DPIO_FRAMEWORK_ARDUINO_LWIP2_IPV6_LOW_MEMORY
 	!echo "-DFRIDGE_REVISION=\\\""$(git describe --dirty=+ --always)"\\\""
 build_unflags = -fno-rtti
 lib_deps = ArduinoJson@6.11.3
