--- a/platformio.ini
+++ b/platformio.ini
@@ -7,7 +7,11 @@ framework = arduino
 build_flags = -std=c++11 -Os -flto -Wall -Wextra -Werror -DPIO_FRAMEWORK_ARDUINO_LWIP2_IPV6_LOW_MEMORY
 	!echo "-DFRIDGE_REVISION=\\\""$(git describe --dirty=+ --always)"\\\""
 build_unflags = -fno-rtti
-lib_deps = ArduinoJson@6.11.3
+lib_deps =
+	uuid-common
+	uuid-log
+	uuid-console
+	ArduinoJson@6.11.3
 
 [env:d1_mini]
 platform = espressif8266@2.2.2
