--- a/platformio.ini
+++ b/platformio.ini
@@ -4,7 +4,11 @@ extra_configs = pio_local.ini
 
 [common]
 framework = arduino
-build_flags = -std=c++11 -Os -flto -Wall -Wextra -Werror -DPIO_FRAMEWORK_ARDUINO_LWIP2_IPV6_LOW_MEMORY
+build_flags = -std=c++11 -Os -flto -Wall -Wextra -Werror
+	-DPIO_FRAMEWORK_ARDUINO_LWIP2_IPV6_LOW_MEMORY
+	-DARDUINOJSON_ENABLE_STD_STREAM=0
+	-DARDUINOJSON_USE_DOUBLE=0
+	-DARDUINOJSON_USE_LONG_LONG=0
 	!echo "-DFRIDGE_REVISION=\\\""$(git describe --dirty=+ --always)"\\\""
 build_unflags = -fno-rtti
 lib_deps =
