--- a/platformio.ini
+++ b/platformio.ini
@@ -6,6 +6,7 @@ extra_configs = pio_local.ini
 framework = arduino
 build_flags = -std=c++11 -Os -flto -Wall -Wextra -Werror
 	-DPIO_FRAMEWORK_ARDUINO_LWIP2_IPV6_LOW_MEMORY
+	-DARDUINOJSON_ENABLE_STD_STRING=1
 	-DARDUINOJSON_ENABLE_STD_STREAM=0
 	-DARDUINOJSON_USE_DOUBLE=0
 	-DARDUINOJSON_USE_LONG_LONG=0
