--- a/platformio.ini
+++ b/platformio.ini
@@ -6,17 +6,21 @@ extra_configs = pio_local.ini
 framework = arduino
 build_flags = -std=c++11 -Os -flto -Wall -Wextra -Werror
 	-DPIO_FRAMEWORK_ARDUINO_LWIP2_IPV6_LOW_MEMORY
+	-DARDUINOJSON_EMBEDDED_MODE=1
 	-DARDUINOJSON_ENABLE_STD_STRING=1
 	-DARDUINOJSON_ENABLE_STD_STREAM=0
+	-DARDUINOJSON_ENABLE_ARDUINO_STRING=0
+	-DARDUINOJSON_ENABLE_ARDUINO_STREAM=1
+	-DARDUINOJSON_ENABLE_ARDUINO_PRINT=1
 	-DARDUINOJSON_USE_DOUBLE=0
 	-DARDUINOJSON_USE_LONG_LONG=0
 	!echo "-DFRIDGE_REVISION=\\\""$(git describe --dirty=+ --always)"\\\""
 build_unflags = -fno-rtti
 lib_deps =
-	uuid-common
-	uuid-log
-	uuid-console
-	ArduinoJson@6.11.3
+	uuid-common@^1.0.0
+	uuid-log@^2.0.0
+	uuid-console@^0.5.0
+	ArduinoJson@~6.11.4
 
 [env:d1_mini]
 platform = espressif8266@2.2.2
