--- a/platformio.ini
+++ b/platformio.ini
@@ -16,10 +16,11 @@ build_flags = -std=c++11 -Os -flto -Wall -Wextra -Werror
 	-DARDUINOJSON_USE_LONG_LONG=0
 	!echo "-DFRIDGE_REVISION=\\\""$(git describe --dirty=+ --always)"\\\""
 build_unflags = -fno-rtti
+lib_ldf_mode = off
 lib_deps =
 	uuid-common@^1.0.0
 	uuid-log@^2.0.0
-	uuid-console@^0.5.0
+	uuid-console@^0.1.0
 	ArduinoJson@~6.11.4
 
 [env:d1_mini]
@@ -29,4 +30,5 @@ board_build.f_cpu = 160000000L
 framework = ${common.framework}
 build_flags = ${common.build_flags} -Wl,-Teagle.flash.4m1m.ld
 build_unflags = ${common.build_unflags}
+lib_ldf_mode = ${common.lib_ldf_mode}
 lib_deps = ${common.lib_deps}
