Add WiFi network connectivity

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,7 @@ lib_deps =
 	uuid-common@^1.0.1
 	uuid-log@^2.0.3
 	uuid-console@^0.5.0
-	ArduinoJson@~6.11.4
+	ArduinoJson@~6.11.5
 
 [env:d1_mini]
 platform = espressif8266@2.2.2
@@ -32,3 +32,4 @@ build_flags = ${common.build_flags} -Wl,-Teagle.flash.4m1m.ld
 build_unflags = ${common.build_unflags}
 lib_ldf_mode = ${common.lib_ldf_mode}
 lib_deps = ${common.lib_deps}
+	ESP8266WiFi
