--- a/platformio.ini
+++ b/platformio.ini
@@ -16,11 +16,12 @@ build_flags = -std=c++11 -Os -flto -Wall -Wextra -Werror
 	-DARDUINOJSON_USE_LONG_LONG=0
 	!echo "-DFRIDGE_REVISION=\\\""$(git describe --dirty=+ --always)"\\\""
 build_unflags = -fno-rtti
-lib_ldf_mode = off
+lib_ldf_mode = chain+
 lib_deps =
 	uuid-common@^1.0.1
-	uuid-log@^2.0.3
 	uuid-console@^0.5.0
+	uuid-log@^2.0.4
+	uuid-syslog
 	ArduinoJson@~6.11.5
 
 [env:d1_mini]
