--- a/platformio.ini
+++ b/platformio.ini
@@ -19,9 +19,9 @@ build_unflags = -fno-rtti
 lib_ldf_mode = chain+
 lib_deps =
 	uuid-common@^1.0.1
-	uuid-console@^0.5.0
 	uuid-log@^2.0.4
-	uuid-syslog
+	uuid-console@^0.6.0
+	uuid-syslog@^2.0.0
 	ArduinoJson@~6.11.5
 
 [env:d1_mini]
