Add telnet server

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,10 +18,11 @@ build_flags = -std=c++11 -Os -flto -Wall -Wextra -Werror
 build_unflags = -fno-rtti
 lib_ldf_mode = chain+
 lib_deps =
-	uuid-common@^1.0.1
-	uuid-log@^2.1.0
-	uuid-console@^0.6.0
+	uuid-common@^1.1.0
+	uuid-log@^2.1.1
+	uuid-console@^0.7.0
 	uuid-syslog@^2.0.1
+	uuid-telnet@^0.1.0
 	ArduinoJson@~6.11.5
 
 [env:d1_mini]
