--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ build_flags = -std=c++11 -Os -flto -Wall -Wextra -Werror
 	-DARDUINOJSON_ENABLE_ARDUINO_PRINT=1
 	-DARDUINOJSON_USE_DOUBLE=0
 	-DARDUINOJSON_USE_LONG_LONG=0
+	-DONEWIRE_CRC16=0
 	!echo "-DFRIDGE_REVISION=\\\""$(git describe --dirty=+ --always)"\\\""
 build_unflags = -fno-rtti
 lib_ldf_mode = chain+
@@ -24,6 +25,7 @@ lib_deps =
 	uuid-syslog@^2.0.4
 	uuid-telnet@^0.1.0
 	ArduinoJson@~6.11.5
+	1@^2.3.5 ; OneWire
 
 [env:d1_mini]
 platform = espressif8266@2.2.2
