--- a/platformio.ini
+++ b/platformio.ini
@@ -1,39 +1,21 @@
 [platformio]
-default_envs = d1_mini
-extra_configs = pio_local.ini
+extra_configs =
+	src/app/pio/config.ini
+	pio_local.ini
 
-[common]
-framework = arduino
-build_flags = -std=c++11 -Os -flto -Wall -Wextra -Werror
-	-DPIO_FRAMEWORK_ARDUINO_LWIP2_IPV6_LOW_MEMORY
-	-DARDUINOJSON_EMBEDDED_MODE=1
-	-DARDUINOJSON_ENABLE_STD_STRING=1
-	-DARDUINOJSON_ENABLE_STD_STREAM=0
-	-DARDUINOJSON_ENABLE_ARDUINO_STRING=0
-	-DARDUINOJSON_ENABLE_ARDUINO_STREAM=1
-	-DARDUINOJSON_ENABLE_ARDUINO_PRINT=1
-	-DARDUINOJSON_USE_DOUBLE=0
-	-DARDUINOJSON_USE_LONG_LONG=0
+[env]
+custom_app_name = fridge
+
+[app:common]
+build_flags =
+	${env.build_flags}
 	-DONEWIRE_CRC16=0
-	!echo "-DFRIDGE_REVISION=\\\""$(git describe --dirty=+ --always)"\\\""
-build_unflags = -fno-rtti
-lib_ldf_mode = chain+
 lib_deps =
-	uuid-common@^1.1.0
-	uuid-log@^2.1.1
-	uuid-console@^0.7.2
-	uuid-syslog@^2.0.4
-	uuid-telnet@^0.1.0
-	ArduinoJson@~6.11.5
-	1@^2.3.5 ; OneWire
+	${env.lib_deps}
+	paulstoffregen/OneWire@^2.3.5
 
 [env:d1_mini]
-platform = espressif8266@2.2.2
-board = d1_mini
-board_build.f_cpu = 160000000L
-framework = ${common.framework}
-build_flags = ${common.build_flags} -Wl,-Teagle.flash.4m1m.ld
-build_unflags = ${common.build_unflags}
-lib_ldf_mode = ${common.lib_ldf_mode}
-lib_deps = ${common.lib_deps}
-	ESP8266WiFi
+extends = app:d1_mini
+
+[env:s2_mini]
+extends = app:s2_mini
